[project]
name = "llm-inference-bench"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "divinerapier", email = "sihao.fang@outlook.com" }
]
dependencies = [
    "vllm>=0.6.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/llm_inference_bench"]
